--- a/views/videos/show.ejs
+++ b/views/videos/show.ejs
@@ -7,9 +7,8 @@
     <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
-
+<h1>VIDEO SHOW PAGE</h1>
 
     <script src="js/videoShow.js"></script>
   </body>
 </html>
-
