--- a/views/index.ejs
+++ b/views/index.ejs
@@ -88,15 +88,14 @@
           </div>
         </article>
         <article class="horizontal-scroll">
-          <div class="scrollmenu">
+          <ul class="scrollmenu">
             <%for(let i = 0; i < videos.length; i++) {%>
-              <div>
+              <li class="vid-div-scroll">
                 <div class="video-player"><iframe src="https://youtube.com/embed/<%=videos[i].url%>"></iframe></div>
-                <div><a href="/videos/show.ejs"><%= videos[i].title %></a></div>
-              </div>
+                <div class="title-div"><a href="/videos/show.ejs"><%= videos[i].title %></a></div>
+              </li>
             <%}%>
-          </div>
-
+          </ul>
         </article>
       </section>
     </main>
