--- a/views/videos/show.ejs
+++ b/views/videos/show.ejs
@@ -7,8 +7,17 @@
     <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
-<h1>VIDEO SHOW PAGE</h1>
-
+    <header>
+      <div class="home-btn-div">
+        <button class="home-btn"><a href="/"<i class="fas fa-home hamburger"></a></i></button>
+        <button class="ham-btn"><i class="fas fa-bars hamburger"></i></button>
+      </div>
+    </header>
+    <main>
+    </main>
+    <footer>
+    </footer>
     <script src="js/videoShow.js"></script>
   </body>
 </html>
+
