--- a/views/videos/show.ejs
+++ b/views/videos/show.ejs
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Projecy</title>
+    <title>fortnite</title>
     <script src="https://kit.fontawesome.com/5af6d749d4.js"></script>
     <link rel="stylesheet" href="/css/style.css">
   </head>
@@ -11,6 +11,14 @@
       <div class="home-btn-div">
         <button class="home-btn"><a href="/"<i class="fas fa-home hamburger"></a></i></button>
         <button class="ham-btn"><i class="fas fa-bars hamburger"></i></button>
+      </div>  
+      <div class="modal modal-login">
+        <div class="modal-content">
+          <div class="modal-body">
+            <a href="/user/logout" class="log-out">Logout</a>
+            <h2><a href="/user/<%=userID%>">Account</a></h2>
+          </div>
+        </div>
       </div>
     </header>
     <main>
