--- a/views/index.ejs
+++ b/views/index.ejs
@@ -88,14 +88,14 @@
           </div>
         </article>
         <article class="horizontal-scroll">
-          <ul class="scrollmenu">
+          <div class="scrollmenu">
             <%for(let i = 0; i < videos.length; i++) {%>
-              <li class="vid-div-scroll">
+              <div class="vid-container">
                 <div class="video-player"><iframe src="https://youtube.com/embed/<%=videos[i].url%>"></iframe></div>
                 <div class="title-div"><a href="/videos/show.ejs"><%= videos[i].title %></a></div>
-              </li>
+              </div>
             <%}%>
-          </ul>
+          </div>
         </article>
       </section>
     </main>
