linked video to show page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -92,7 +92,7 @@
             <%for(let i = 0; i < videos.length; i++) {%>
               <div class="vid-container">
                 <div class="video-player"><iframe src="https://youtube.com/embed/<%=videos[i].url%>"></iframe></div>
-                <div class="title-div"><a href="/videos/show.ejs"><%= videos[i].title %></a></div>
+                <div class="title-div"><a href="/video/<%=videos[i]._id%>"><%= videos[i].title %></a></div>
               </div>
             <%}%>
           </div>
