--- a/views/videos/show.ejs
+++ b/views/videos/show.ejs
@@ -7,25 +7,11 @@
     <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
-    <header>
-      <div class="home-btn-div">
+    HIHIHIHI
+    <div class="home-btn-div">
         <button class="home-btn"><a href="/"<i class="fas fa-home hamburger"></a></i></button>
         <button class="ham-btn"><i class="fas fa-bars hamburger"></i></button>
-      </div>  
-      <div class="modal modal-login">
-        <div class="modal-content">
-          <div class="modal-body">
-            <a href="/user/logout" class="log-out">Logout</a>
-            <h2><a href="/user/<%=userID%>">Account</a></h2>
-          </div>
-        </div>
-      </div>
-    </header>
-    <main>
-    </main>
-    <footer>
-    </footer>
-    <script src="js/videoShow.js"></script>
+    </div>
+    
   </body>
 </html>
-
