--- a/views/index.ejs
+++ b/views/index.ejs
@@ -91,8 +91,8 @@
           <div class="scrollmenu">
             <%for(let i = 0; i < videos.length; i++) {%>
               <div class="vid-container">
+                <a href="/video/<%=videos[i]._id%>">asdf</a>
                 <div class="video-player"><iframe src="https://youtube.com/embed/<%=videos[i].url%>"></iframe></div>
-                <div class="title-div"><a href="/videos/show.ejs"><%= videos[i].title %></a></div>
               </div>
             <%}%>
           </div>
