added password check

--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>user index</title>
+    <title>Account</title>
     <script src="https://kit.fontawesome.com/5af6d749d4.js"></script>
     <link rel="stylesheet" href="/css/style.css"/>
 </head>
