--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,7 +35,7 @@
                       <input type="password" name="password" placeholder="password">
                       <button class="log-in-modal btn">Log In</button>
                   </form>
-                  <button class="sign-up-btn btn">sign up</button>
+                  <button class="sign-up-btn btn">Sign up</button>
               <div class="modal modal-signup">
                 <div class="modal-content">
                   <div class="modal-header">
@@ -45,8 +45,9 @@
                     <form action="/user/signup" method="POST" class="form">
                       <input type="text" name="name" placeholder="name">
                       <input type="email" name="email" placeholder="email">
-                      <input type="password" name="password" placeholder="password">
-                      <input type="password" name="passwordcheck" placeholder="password check">
+                      <input type="password" class="password" name="password" placeholder="password">
+                      <input type="password" class="passwordcheck" name="passwordcheck" placeholder="password check">
+                      <span class="mismatch"></span>
                       <button class="sign-up-modal btn">Sign Up</button>
                     </form>
                   </div>
