fixed submit button disable

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,7 +48,7 @@
                       <input type="password" class="password" name="password" placeholder="password">
                       <input type="password" class="passwordcheck" name="passwordcheck" placeholder="password check">
                       <span class="mismatch"></span>
-                      <button class="sign-up-modal btn">Sign Up</button>
+                      <input type="submit" class="sign-up-modal-btn" value="Submit">
                     </form>
                   </div>
                 </div>
