added working comments

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -61,6 +61,9 @@
     <h1>FORTNITE MANIA </h1>
     </header>
     <main>
+      <div class="modal modal-search">
+        <div class="modal-content">
+          <div class="modal-header">
       <div class="filter-div">
         <input class="search" type="text" name="search" placeholder="Search">
         <ul class="autocomplete">
