--- a/views/videos/show.ejs
+++ b/views/videos/show.ejs
@@ -11,7 +11,7 @@
       <div class="home-btn-div">
         <button class="home-btn"><a href="/"<i class="fas fa-home icon-btn"></a></i></button>
         <button class="ham-btn"><i class="fas fa-bars icon-btn"></i></button>
-      </div>  
+      </div>
       <nav>
       <%if(logged) {%>
         <div class="modal modal-login">
@@ -67,7 +67,7 @@
         <div>
           <h1><%=video.title%></h1>
           <iframe src="https://youtube.com/embed/<%=video.url%>" class="main-vid"></iframe>
-          <div class="info-div"> 
+          <div class="info-div">
             <span><%=video.user%></i></span>
             <%if(!logged) {%>
             <span class="like-btn"><i class="fas fa-thumbs-up"><%=video.likes.length%></i></span>
@@ -83,14 +83,14 @@
           </div>
         </div>
         <div class="show-comments">
-            <form action="/video/<%=video._id%>/comments?_method=PUT" method="POST">
-              <textarea type="text" max="150">
-              </textarea>
-              <div class="comment-btn-div">
-                <button>Add comment</button>
-              </div>
-            </form>
-            <button class="cancel-btn">Cancel</button>
+          <form action="/video/<%=video._id%>/comments?_method=PUT" method="POST">
+            <textarea class="comment-area" name="comments" type="text" max="150" >
+              Comment....
+            </textarea>
+            <div class="comment-btn-div">
+              <button>Add comment</button>
+            </div>
+          </form>
             <ul>
               <%for(let i = 0; i < video.comments.length; i++) {%>
                 <li><%=video.comments[i]%></li>
