--- a/views/index.ejs
+++ b/views/index.ejs
@@ -107,10 +107,10 @@
     </main>
     <footer>
       <div class="socialmedia">
-        <a href="https://www.epicgames.com/fortnite/en-US/play-now/battle-royale?utm_source=GoogleSearch&utm_medium=Search&utm_campaign=an*Internal_pr*FNBR_ct*C_pl*SearchBrand_co*US_cr*exact&utm_id=1698686527&utm_content=buildbattlewin_playfree&utm_term=fortnite&gclid=CjwKCAjw-ITqBRB7EiwAZ1c5U271SYFKmSQ9FgA-Wbcbw-vfg8pKMqZ5Vq8cBw41IwB6o_phqZbsjRoCsRsQAvD_BwE"><i class="fab fa-twitter-square"></i></a>
-        <a href="https://www.epicgames.com/fortnite/en-US/play-now/battle-royale?utm_source=GoogleSearch&utm_medium=Search&utm_campaign=an*Internal_pr*FNBR_ct*C_pl*SearchBrand_co*US_cr*exact&utm_id=1698686527&utm_content=buildbattlewin_playfree&utm_term=fortnite&gclid=CjwKCAjw-ITqBRB7EiwAZ1c5U271SYFKmSQ9FgA-Wbcbw-vfg8pKMqZ5Vq8cBw41IwB6o_phqZbsjRoCsRsQAvD_BwE"><i class="fab fa-facebook-square"></i></a>
+        <a href="https://twitter.com/epicgames*Internal_pr*FNBR_ct*C_pl*SearchBrand_co*US_cr*exact&utm_id=1698686527&utm_content=buildbattlewin_playfree&utm_term=fortnite&gclid=CjwKCAjw-ITqBRB7EiwAZ1c5U271SYFKmSQ9FgA-Wbcbw-vfg8pKMqZ5Vq8cBw41IwB6o_phqZbsjRoCsRsQAvD_BwE"><i class="fab fa-twitter-square"></i></a>
+        <a href="https://www.facebook.com/FortniteGame/*Internal_pr*FNBR_ct*C_pl*SearchBrand_co*US_cr*exact&utm_id=1698686527&utm_content=buildbattlewin_playfree&utm_term=fortnite&gclid=CjwKCAjw-ITqBRB7EiwAZ1c5U271SYFKmSQ9FgA-Wbcbw-vfg8pKMqZ5Vq8cBw41IwB6o_phqZbsjRoCsRsQAvD_BwE"><i class="fab fa-facebook-square"></i></a>
         <a href="https://www.epicgames.com/fortnite/en-US/play-now/battle-royale?utm_source=GoogleSearch&utm_medium=Search&utm_campaign=an*Internal_pr*FNBR_ct*C_pl*SearchBrand_co*US_cr*exact&utm_id=1698686527&utm_content=buildbattlewin_playfree&utm_term=fortnite&gclid=CjwKCAjw-ITqBRB7EiwAZ1c5U271SYFKmSQ9FgA-Wbcbw-vfg8pKMqZ5Vq8cBw41IwB6o_phqZbsjRoCsRsQAvD_BwE"><i class="fab fa-instagram"></i></a>
-        <a href="https://www.epicgames.com/fortnite/en-US/play-now/battle-royale?utm_source=GoogleSearch&utm_medium=Search&utm_campaign=an*Internal_pr*FNBR_ct*C_pl*SearchBrand_co*US_cr*exact&utm_id=1698686527&utm_content=buildbattlewin_playfree&utm_term=fortnite&gclid=CjwKCAjw-ITqBRB7EiwAZ1c5U271SYFKmSQ9FgA-Wbcbw-vfg8pKMqZ5Vq8cBw41IwB6o_phqZbsjRoCsRsQAvD_BwE"><i class="fab fa-reddit-square"></i></a>
+        <a href="https://www.reddit.com/r/FORTnITE/*Internal_pr*FNBR_ct*C_pl*SearchBrand_co*US_cr*exact&utm_id=1698686527&utm_content=buildbattlewin_playfree&utm_term=fortnite&gclid=CjwKCAjw-ITqBRB7EiwAZ1c5U271SYFKmSQ9FgA-Wbcbw-vfg8pKMqZ5Vq8cBw41IwB6o_phqZbsjRoCsRsQAvD_BwE"><i class="fab fa-reddit-square"></i></a>
       </div>
     </footer>
     <script src="js/app.js"></script>
