--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,6 +9,13 @@
     font-family: fortnite;
     color: #03A9F4;
 }
+@media screen and (min-width: 700px) {
+
+}
+
+body {
+    margin: 0px 50px;
+}
 
 /*  MODAL */
 
@@ -51,6 +58,11 @@
     margin-bottom: 40px;
 }
 
+.modal-header h1 a {
+    text-align: center;
+    color: #03A9F4;
+}
+
 .modal-header h1 {
     text-align: center;
     color: #03A9F4;
@@ -65,7 +77,7 @@
 header {
     background: #03A9F4;
     color: white;
-    height: 158px;
+    height: 80px;
     letter-spacing: 5px;
     display: flex;
     flex-direction: column;
@@ -78,12 +90,13 @@ nav {
 header h1 {
     text-align: center;
     position: relative;
-    font-size: 5em;
+    font-size: 2em;
     color: white;
+    position: relative;
+    top: 15px;
 }
 
 iframe {
-    width: 100%;
     height: 230px;
     border: 0px;
 }
@@ -106,19 +119,8 @@ section {
     align-items: center;
 }
 
-article:nth-child(1) {
-    padding-bottom: 4px;
-}
-
 section article {
-    margin: 1% auto;
     width: 100%;
-}
-
-.center-art {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 
 .form {
@@ -133,45 +135,53 @@ section article {
 }
 
 .main-vid {
-    height: 450px;
+    height: 235px;
+    width: 100%;
 }
 
 .side-vid {
-    height: 200px
+    height: 100px;
+    width: -webkit-fill-available;
 }
 
 .filter-div {
     display: flex;
     justify-content: center;
-    margin: 20px 0px;
+    margin-top: 5px;
 }
 
 .filter-div input {
-    height: 40px;
-    font-size: 34px;
+    height: 21px;
+    font-size: 1em;
 }
 
 .title-div {
     letter-spacing: 3px;
+    text-align: center;
+}
+
+.title-div h2:nth-child(2) {
+    font-size: .8em;
 }
 
 .info-div {
     display: flex;
     justify-content: space-evenly;
-    font-size: 34px;
-    margin: 20px 0px;
+    font-size: 1,2em;
+    margin: 5px 0px;
+    letter-spacing: 1px;
 }
 
 .info-div i {
-    font-size: 34px;
+    font-size: 1em;
 }
 
 footer {
     text-align: center;
 }
 
-footer i {
-    font-size: 34px;
+.socialmedia i {
+    font-size: 3em;
     margin: 5px;
 }
 
@@ -185,7 +195,15 @@ footer i {
 .icon-btn {
     background: #03a9f4;
     color: white;
-    font-size: 45px;
+    font-size: 1em;
+}
+
+.home-icon {
+    color: white;
+}
+
+.ham-btn i {
+    font-size: 2em;
 }
 
 .ham-btn, .home-btn, .logged-btn {
@@ -205,13 +223,13 @@ footer i {
 
 input, .btn {
     text-align: center;
-    width: 80%;
+    width: 100%;
     font-weight: bold;
-    letter-spacing: 7px;
+    letter-spacing: 2px;
     border-radius: 5px;
     border: 0;
-    font-size: 30px;
-    height: 50px;
+    font-size: 1.3em;
+    height: 24px;
     margin-bottom: 10px;
     background: rgba(0,0,0,0);
 }
@@ -223,11 +241,6 @@ input:hover, .btn:hover {
 .upload-btn {
     width: 23%;
     margin-bottom: 20px;
-}
-
-.dislike-btn, .like-btn {
-    border: 0px;
-    font-size: 23px;
 }
 
 .comment-btn-div button {
@@ -250,8 +263,27 @@ input:hover, .btn:hover {
 
 /*  user index  */
 
+.user-sec {
+    display: flex;
+    flex-direction: row;
+    margin-top: 20px;
+}
+
+.user-sec article:nth-child(2) {
+    width: 40%;
+}
+
+.center-art {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 10px;
+    margin-right: 14px;
+}
+
 .user-vid {
-    width: 90%;
+    width: 100%;
 }
 
 .user-vid-list {
@@ -262,7 +294,10 @@ input:hover, .btn:hover {
     display: none;
 }
 
-
+.user-footer {
+    position: relative
+    top 100px;
+}
 
 /*  home index  */
 
@@ -288,39 +323,55 @@ main {
     justify-content: space-evenly;
 }
 
-div.scrollmenu {
+.scrollmenu {
+    display: flex;
     overflow: scroll;
-    height: 576px;
+    height: 175px;
     border-bottom: 2px solid;
     border-top: 2px solid;
-    padding: 43px 0px;
+    padding: 10px 0px;
 }
 
-div.scrollmenu a {
+.scrollmenu a {
   text-align: center;
-  text-decoration: none;
-  letter-spacing: 2px;
-  font-size: 20px;
+  letter-spacing: 1px;
+  font-size: .6em;
 }
 
-div.scrollmenu a:hover {
+.scrollmenu a:hover {
   background-color: #777;
 }
 
 .vid-container{
-    display: flex;
+
 }
 
 .vid-player {
-    width: 61%;
-    padding-right: 22px;
+    padding-right: 13px;
+}
+
+.popular {
+    display: flex;
+}
+
+.popular-vid {
+    width: 60%;
+}
+
+.popular-user {
+    margin-left: 13px;
+}
+
+.popular-user h1 {
+    font-size: 2em;
+    margin-bottom: 10px;
 }
 
 /*    show     */
 
 .show-art h1 {
     text-align: center;
-    font-size: 36px;
+    font-size: 2em;
     letter-spacing: 2px;
 }
 
@@ -345,6 +396,7 @@ textarea {
 .comment-btn-div {
     text-align: right;
 }
+
 
 /*  KEY FRAMES  */
 
