--- a/views/index.ejs
+++ b/views/index.ejs
@@ -99,7 +99,7 @@
           <div class="scrollmenu">
             <%for(let i = 0; i < videos.length; i++) {%>
               <div class="vid-container">
-                <div class="vid-player"><iframe src="https://youtube.com/embed/<%=videos[i].url%>" class="side-vid"></iframe></div>
+                <div class="vid-player"><iframe src="<%=videos[i].url%>" class="side-vid"></iframe></div>
                 <div class="title-div">
                     <h2><a href="/video/<%=videos[i]._id%>" class="title"><%= videos[i].title %></a></h2>
                     <h2 class ="user-name"><%=videos[i].user%></h2>
