--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -17,10 +17,9 @@
           <div class="modal-content">
                 <div class="modal-header">
                     <a href="/user/logout" class="log-out">Logout</a>
-                    <h1>Account</h1>
                 </div>
                 <div class="modal-body modal-account">
-                    <form action="/user/<%=user._id%>?_method=PUT" method="POST" class="edit-form form">
+                    <form action="/user/<%=user._id%>?_method=PUT" method="POST" class="edit-user form">
                         <input type="text" name="name" value="<%=user.name%>"/><br/>
                         <input type="email" name="email" value="<%=user.email%>"/><br/>
                         <input type="password" name="password" placeholder="password"/><br/>
@@ -67,6 +66,21 @@
                             <form action="/video/<%=userVideos.videos[i]._id%>?_method=DELETE" method="POST">
                                 <button class="">Delete</button>
                             </form>
+                            <button class="edit-vid-btn">Edit Video</button>
+                            <div class="modal modal-edit-vid">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h1>Edit Video</h1>
+                                    </div>
+                                    <div class="modal-body">
+                                        <form action="/video/<%=userVideos.videos[i]._id%>?_method=PUT" method="POST" class="form">
+                                            <input type="text" name="title" value="<%=userVideos.videos[i].title%>"/>
+                                            <input type="text" name="tags" value="<%=userVideos.videos[i].tags%>"/>
+                                            <button class="submit-btn btn">Edit Video</button>
+                                        </form>
+                                    </div>
+                                </div>    
+                            </div>    
                         </li>
                     <%}%>
                 </ul>
@@ -81,7 +95,6 @@
                                 <input type="text" name="user" value="<%=user.name%>" class="upload-creator"/>
                                 <input type="text" name="url" placeholder="url"/>
                                 <input type="text" name="title" placeholder="title"/>
-                                <input type="text" name="info" placeholder="info"/>
                                 <input type="text" name="tags" placeholder="tags"/>
                                 <button class="submit-btn btn">Upload Video</button>
                              </form>
