--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
         <div class="modal modal-login">
           <div class="modal-content">
             <div class="modal-header">
-              <a href="/user/logout" class="log-out">Logout</a>
+              <h6><a href="/user/logout" class="log-out">Logout</a></h6>
               <h1><a href="/user/<%=userID%>">Account</a></h1>
             </div>
           </div>
