--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,9 +46,10 @@
                     <form action="/user/signup" method="POST" class="form">
                       <input type="text" name="name" placeholder="name">
                       <input type="email" name="email" placeholder="email">
-                      <input type="password" name="password" placeholder="password">
-                      <input type="password" name="passwordcheck" placeholder="password check">
-                      <button class="sign-up-modal btn">Sign Up</button>
+                      <input class="password" type="password" name="password" placeholder="password">
+                      <input class="passwordcheck" type="password" name="passwordcheck" placeholder="password check">
+                      <h3 class="mismatch"></h3>
+                      <button class="sign-up-modal-btn">Sign Up</button>
                     </form>
                   </div>
                 </div>
